# ML-Learning

./: .gitignore  hands_on_chapter_2.ipynb  hands_on_chapter_3.ipynb  pyproject.toml
chapter_10_introduction_to_ANN_with_keras/: hands_on_chapter_10-2.ipynb  hands_on_chapter_10.ipynb  introduction_to_ANN_with_keras_excercise.ipynb
chapter_11_deep_neural_networks/: deep_neural_networks_excercise.ipynb  hands_on_chapter_11.ipynb  my_model_A.h5
chapter_12_custom_models_and_training_with_tf/: hands_on_chapter_12.ipynb
chapter_14_deep_computer_vision_with_cnn/: exercises_chapter_14.ipynb  hands_on_chapter_14.ipynb  hands_on_chapter_14_2.ipynb
chapter_2_end_to_end/: hands_on_chapter_2.ipynb
chapter_3_classification/: hands_on_chapter_3.ipynb  mnist_exercise.ipynb
chapter_4_training_models/: hands_on_chapter_4.ipynb
chapter_5_support_vector_machines/: hands_on_chapter_5.ipynb  svms_exercise.ipynb
chapter_6_decision_trees/: decision_trees_excercise.ipynb  hands_on_chapter_6.ipynb  iris_tree_reg.dot
chapter_7_ensemble_learning/: hands_on_chapter_7.ipynb
chapter_8_dimensionality_reduction/: dimensionality_reduction_excercise.ipynb  hands_on_chapter_8.ipynb
chapter_9_unsupervised_learning/: hands_on_chapter_9.ipynb  unsupervised_learning_excercise.ipynb
kaggle/titatnic/: titanic.ipynb
other/kaggle/mnist/: mnist_kaggle_model.h5  mnist_kaggle_model_rnd.h5  mnist_notebook.ipynb  results.csv
other/kaggle/titatnic/: titanic.ipynb
other/udemy-course/: code_along.ipynb
(+10 files in other folders)
