[tool.poetry]
name = "ml-learning"
version = "0.1.0"
description = ""
authors = ["AsgrimS <jan.semik@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
scikit-learn = "^1.1.0"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
tensorflow = "^2.8.0"
Pillow = "^9.1.0"
tensorflow-datasets = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
